Apply and fixing errors on mobile navbar/ install styled-components

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   animation: float 1s infinite;
 }
 
-
 @keyframes float {
   0% {
     transform: translatey(0px);
@@ -13,10 +12,4 @@
   100% {
     transform: translatey(0px);
   }
-}
-
-.SITTag{
-  background-image: url("./assets/images/SITKMUTT_Tag.png");
-  background-size: contain;
-  background-repeat: no-repeat;
 }
